OCP-Infrastructure/resources/grafana/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grafana
  name: grafana
spec:
  ports:
  - name: 3000-tcp
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: grafana
    deploymentconfig: grafana
  sessionAffinity: None
  type: ClusterIP
