OCP-Infrastructure/resources/grafana/route.yml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: grafana
  name: grafana
spec:
  port:
    targetPort: 3000-tcp
  to:
    kind: Service
    name: grafana
    weight: 100
  wildcardPolicy: None
